--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <h1><em><a href="www.nba.com">Kendrick Ruffin</a></em></h1>
         <p><em>!!!we going to do this!!!</em></p>
         <br>
-        <h4>Kendrick ruffin up here going for it all .I am vegan,folower of jesus,programmer and a King. </h4>
+        <h5>Hello everyone I am Kendrick Ruffin up here going for it all .I am vegan, follower of Jesus, programmer and a King, happy that I have a loving and beautiful family with my priceless soul mate and our new precious blessing.</h5>
       </td>
     </tr>
   </table>
