--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
       <td><img src="images/Kpic2.png" alt="k"></td>
       <td>
         <h1><em><a href="www.nba.com">Kendrick Ruffin</a></em></h1>
-        <p><em>!!!we going to do this!!!</em></p>
-        <br>
+        <h4>!!!we are going to do this!!!</h4>
+       
         <h5>Hello everyone I am Kendrick Ruffin up here going for it all .I am vegan, follower of Jesus, programmer and a King, happy that I have a loving and beautiful family with my priceless soul mate and our new precious blessing.</h5>
       </td>
     </tr>
