--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <tr>
       <td><img src="images/Kpic2.png" alt="k"></td>
       <td>
-        <h1><em><a href="www.nba.com">Kendrick Ruffin</a></em></h1>
+        <h1><em><a href="https://www.nba.com">Kendrick Ruffin</a></em></h1>
         <h4>!!!we are going to do this!!!</h4>
        
         <h5>Hello everyone I am Kendrick Ruffin up here going for it all .I am vegan, follower of Jesus, programmer and a King, happy that I have a loving and beautiful family with my priceless soul mate and our new precious blessing.</h5>
